# LockdownDB-dev

python/: AESCipher.py  RSACipher.py  Search.py  SimpleSearchTest.py  app.py  demodb.sqlite  lockdown.py  test.py  testbenchmark.py
python/static/: lockdown.js
python/templates/: index.html
rust_proxy/: Cargo.toml
rust_proxy/scripts/: webserver.py
rust_proxy/src/: command.rs  constants.rs  main.rs  server.rs
