[package]
name = "rust_proxy"
version = "0.1.0"
authors = ["Vijay Klein <uytre7907@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# protobuf = { git = "https://github.com/stepancheg/rust-protobuf/" }
async-std = "1.6.5"
async-trait = "0.1.41"
bincode = "1.3.1"
byteorder = "1.3.4"
rusqlite = { version = "0.24.1", features = ["serde_json"] }
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.59"
